Added Iron Backpack. Leather can hold 6*64 items (likely will decrease) and Iron can hold 9*64 items. Also organized the main class.

--- a/src/main/resources/assets/backpack/lang/en_us.json
+++ b/src/main/resources/assets/backpack/lang/en_us.json
@@ -1,5 +1,6 @@
 {
-  "item.backpack.leather_backpack": "Backpack",
+  "item.backpack.leather_backpack": "Leather Backpack",
+  "item.backpack.iron_backpack": "Iron Backpack",
   "item.backpack.backpack_fullness" : "%s/%s Stacks",
   "item.backpack.backpack_remainder" : "%s Items +",
   "entity.backpack.backpack_entity" : "Backpack"
