Backpacks are now dyeable!

--- a/src/main/resources/assets/backpack/lang/en_us.json
+++ b/src/main/resources/assets/backpack/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.backpack.leather_backpack": "Leather Backpack",
+  "item.backpack.backpack": "Backpack",
   "item.backpack.iron_backpack": "Iron Backpack",
   "item.backpack.backpack_fullness" : "%s/%s Stacks",
   "item.backpack.backpack_remainder" : "%s Items +",
