--- a/src/main/resources/assets/backpack/lang/en_us.json
+++ b/src/main/resources/assets/backpack/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.minecraft.smithing_template.armor_trim.base_slot_description": "Put a piece of armor or backpack here",
   "item.backpack.backpack": "Backpack",
   "item.backpack.iron_backpack": "Iron Backpack",
   "item.backpack.adventure_backpack": "Adventure Backpack",
